--- a/APIPoke/pokemon.css
+++ b/APIPoke/pokemon.css
@@ -5,9 +5,103 @@
     box-sizing: border-box;
   }
 
-  :root{
 
-    --myfontTitles: font-family: 
+ .main{
+ 
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: black;
+  background-image: url("https://assets.pokemon.com//assets/cms2/img/misc/virtual-backgrounds/masters/forest.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+}
+ .navbar{
+  height: 10%;
+  width: 100%;
+  background-color: rgba(43,115,185);
+  background-image: url(assets/logoPokemon2.png);
+  background-repeat: no-repeat;
+  background-position: center;
+ }
+ .navbar img{
+  height: 2%;
+  width: auto;
+  background-repeat: no-repeat;
+  background-position: center;
+ }
+ .cuerpo{
+ height: 85%; 
+ width: auto;
+display: flex;
+flex-direction: row;
+justify-content: center;
+align-items: center;
+ }
 
+ form {
+  background-color: #fcd0a1;
+  height: 50%;
+  border-radius: 10px;
+  padding: 20px;
+  width: 300px;
+  margin: 50px auto;
+  /* display: flex;
+  flex-direction: column;
+  justify-content: center; */
+}
 
+label {
+  display: block;
+  margin-bottom: 10px;
+  font-size: 18px;
+  font-weight: bold;
+  color: #de5959;
+}
+
+.infos[type="text"], input[type="email"] {
+  width: 100%;
+  padding: 10px;
+  font-size: 16px;
+  border-radius: 5px;
+  border: none;
+  margin-bottom: 20px;
+
+}
+
+button {
+  background-color: #de5959;
+  color: white;
+  font-size: 18px;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-right: 20px;
+}
+
+button:hover {
+  background-color: #b54141;
+}
+
+#limpar {
+  background-color: #fcb13e;
+  color: white;
+  font-size: 18px;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+#limpar:hover {
+  background-color: #c78d35;
+}
+
+ .footer{
+  height: 5%;
+  width: 100%;
+  background-color: rgba(255,203,5);
  }
