--- a/APIPoke/pokemon.css
+++ b/APIPoke/pokemon.css
@@ -1,13 +1,12 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
 
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-  }
 
+.main {
 
- .main{
- 
   height: 100vh;
   width: 100%;
   display: flex;
@@ -18,30 +17,46 @@
   background-repeat: no-repeat;
   background-position: center;
 }
- .navbar{
+
+.navbar {
   height: 10%;
   width: 100%;
-  background-color: rgba(43,115,185);
+  background-color: rgba(43, 115, 185);
   background-image: url(assets/logoPokemon2.png);
   background-repeat: no-repeat;
   background-position: center;
- }
- .navbar img{
+}
+
+.navbar img {
   height: 2%;
   width: auto;
   background-repeat: no-repeat;
   background-position: center;
- }
- .cuerpo{
- height: 85%; 
- width: auto;
-display: flex;
-flex-direction: row;
-justify-content: center;
-align-items: center;
- }
+}
 
- form {
+.cuerpo {
+  /* border: 2px solid red; */
+  height: 85%;
+  width: auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.intro {
+  /* border: 2px solid yellow; */
+  height: 100%;
+  width: 50%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+
+form {
   background-color: #fcd0a1;
   height: 50%;
   border-radius: 10px;
@@ -61,7 +76,8 @@ label {
   color: #de5959;
 }
 
-.infos[type="text"], input[type="email"] {
+.infos[type="text"],
+input[type="email"] {
   width: 100%;
   padding: 10px;
   font-size: 16px;
@@ -100,8 +116,68 @@ button:hover {
   background-color: #c78d35;
 }
 
- .footer{
+.ficha {
+
+  /* border: 2px solid violet; */
+  height: 100%;
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.datos {
+  /* border: 2px solid greenyellow; */
+  height: 90%;
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  background-color: rgba(255, 205, 5, 0.789);
+  border-radius: 5px;
+  padding-bottom: 20%;
+
+}
+.imagen{
+  /* border:2px solid violet; */
+  height: 70%;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+.nomTypes{
+/* border:2px solid black; */
+height: 70%;
+width: 100%;
+}
+.piramidepurpura{
+
+  text-transform: capitalize;
+  /* border:2px solid red; */
+  height: 70%;
+  width: 100%;
+  font-family:'Josefin Sans', sans-serif;
+  text-align: center;
+  font-size: 40px;
+  padding-top: 30px;
+  
+}
+
+.types{
+  text-transform: capitalize;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+
+}
+.footer {
   height: 5%;
   width: 100%;
-  background-color: rgba(255,203,5);
- }
+  background-color: rgba(255, 203, 5);
+}
